--- a/package.xml
+++ b/package.xml
@@ -9,12 +9,12 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>libfreenect</build_depend>
-
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>image_transport</depend>
-
+  <depend>image_common</depend>
+  <depend>libfreenect</depend>
+  <depend>camera_info_manager</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
