Added a README file and updated the dependencies.

--- a/package.xml
+++ b/package.xml
@@ -2,21 +2,21 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>kinect_ros2</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="lio@todo.todo">lio</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.0.1</version>
+  <description>Kinect v1 driver for ROS2</description>
+  <maintainer email="fernandodelio@gmail.com">Fernando de Lio</maintainer>
+  <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
-  <depend>image_transport</depend>
-  <depend>image_common</depend>
   <depend>libfreenect</depend>
+  <depend>rclcpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>cv_bridge</depend>
+  <depend>image_transport</depend>
   <depend>camera_info_manager</depend>
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+
+  <exec_depend>image_tools</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
