--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
   <depend>camera_info_manager</depend>
+  <depend>depth_image_proc</depend>
 
   <exec_depend>image_tools</exec_depend>
 
